--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -77,6 +77,7 @@ tasks:
           make clean
           make mrproper
           make allyesconfig
+          make menuconfig
           cd ..
         else
           echo "linux directory does not exist. Please run 'task get-linux' first."
@@ -88,7 +89,7 @@ tasks:
       - |
         if [ -d "linux" ]; then
           cd linux
-          make -j8 CC=wllvm LLVM=$PWD/../llvm-project/build/bin/ KCFLAGS="-g"
+          make -j$(nproc) CC=wllvm LLVM=$PWD/../llvm-project/build/bin/ KCFLAGS="-g"
           cd ..
         else
           echo "linux directory does not exist. Please run 'task get-linux' first."
@@ -190,7 +191,7 @@ tasks:
             fi
 
             # Run the LLVM pass
-            timeout 0.5 llvm-project/build/bin/opt -debug-pass-manager -load-pass-plugin=./passes/syncprimitives.so -passes=sync-primitives -disable-output "$file" > "$output_file" 2>&1
+            timeout 1 llvm-project/build/bin/opt -debug-pass-manager -load-pass-plugin=./passes/syncprimitives.so -passes=sync-primitives -disable-output "$file" > "$output_file" 2>&1
 
             # Check if the process was killed due to OOM
             if [ $? -eq 137 ]; then
