--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -217,6 +217,7 @@ tasks:
               else
                 echo "Processing of $file failed"
                 retries=$((retries + 1))
+                > "$output_file"
               fi
             done
 
